ng add @angular/pwa

--- a/angular.json
+++ b/angular.json
@@ -45,7 +45,8 @@
                   "maximumError": "4kb"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "serviceWorker": "ngsw-config.json"
             },
             "development": {
               "optimization": false,
@@ -94,5 +95,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "d0654a71-e7f6-4b77-90c8-0c1ae85a3012"
   }
 }
